syntax = "proto3";
package MsgPB;
import "GameRoomPlayer.proto";
import "GameDef.proto";

message GameRoomPlayerCache{
    GameRoomPlayerInfo m_playerInfo = 1;
    Vector2 m_lastPos = 2;
    Vector2 m_lastVelocity = 3;
    bool m_dirLeft = 4;
}

message GameRoomDataSyncS2C{
    uint32 m_frameIndex = 1;
    repeated GameRoomPlayerCache m_lstCachePlayer = 2;
}